moving agrregator to the edge
